--- a/projeto2/www/html/.htaccess
+++ b/projeto2/www/html/.htaccess
@@ -2,6 +2,7 @@
 # As diretrizes (linhas) entre `BEGIN WordPress` e` END WordPress` são
 # geradas dinamicamente e só devem ser modificadas através de filtros do WordPress.
 # Quaisquer alterações nas diretivas entre esses marcadores serão sobrescritas.
+SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
@@ -9,6 +10,8 @@ RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
+RewriteCond %{HTTP:Authorization} ^(.*)
+RewriteRule ^(.*) - [E=HTTP_AUTHORIZATION:%1]
 </IfModule>
 
 # END WordPress
